--- a/android/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/android/app/src/main/res/drawable/launch_background.xml
@@ -3,10 +3,10 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/colorBackground" />
 
-    <!-- You can insert your own image assets here -->
-    <!-- <item>
-        <bitmap
-            android:gravity="center"
-            android:src="@mipmap/launch_image" />
-    </item> -->
+    <item
+        android:gravity="center"
+        android:drawable="@drawable/appicon"
+        android:width="200dp"
+        android:height="200dp"
+        />
 </layer-list>
