--- a/android/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/android/app/src/main/res/drawable/launch_background.xml
@@ -5,7 +5,7 @@
 
     <item
         android:gravity="center"
-        android:drawable="@drawable/logo"
+        android:drawable="@mipmap/appicon_foreground"
         android:width="200dp"
         android:height="200dp"
         />
